Maude Console Update, Sampling/Response with No Randomness